# network

./: dnsmasq-script-template  dnsmasq-template
nwd/: .gitignore  App.hs  Error.hs  Main.hs  NetworkDaemonConfig.hs  NetworkDomain.hs  NetworkSlaveMethods.hs  NwTypes.hs  Rpc.hs  Setup.hs  XSWifi.hs  network-daemon.cabal  nwd.initscript
nws/: App.hs  Error.hs  Main.hs  NetworkFirewall.hs  NetworkForwarding.hs  NetworkInterface.hs  NetworkManager.hs  NetworkUtils.hs  Rpc.hs  Utils.hs  bridge-connection  network-slave.cabal  nw_notify  nws-notify.rules  nws.initscript  slave-connection
